@@ -19,6 +19,8 @@
 - better TIFF YCbCr reading (thanks Ole)
 - isanalyze generates fewer silly error messages
 - added "written" callbacks, used to implement write to non-vips formats
+- "invalidate" is careful to keep images alive, so invalidate callbacks can do
+  im_close()
 
 26/11/09 started 7.20.3
 - updated en_GB.po translation 
